# TimerApp

./: .gitignore  CMakeLists.txt  README.md  delete.ui  fixedgridlayout.cpp  fixedgridlayout.h  mainwindow.cpp  mainwindow.h  timer_widget.cpp  timer_widget.h
.cache/clangd/index/: fixedgridlayout.h.C8EF3125C8903A7D.idx  main.cpp.B7D44CE9BA796567.idx  mainwindow.cpp.64C3827DBB4DF617.idx  mainwindow.h.364EF128172F0893.idx  timer_widget.h.9ED4A3A7FFF44B76.idx
